--- a/package.json
+++ b/package.json
@@ -61,5 +61,12 @@
 		  "pre-commit": "lint-staged",
 		  "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
 		}
+	  },
+	  "lint-staged": {
+		"*.js": [
+		  "eslint --fix",
+		  "git add"
+		]
 	  }
+	  
 }
