--- a/package.json
+++ b/package.json
@@ -31,5 +31,11 @@
 		"eslint": "^8.57.0",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2"
-	}
+	},
+	"lint-staged": {
+		"*.js": [
+		  "eslint --fix"
+		]
+	  }
+	  
 }
