--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,7 @@
             "error"
         ],
         "no-console": [
-            "error"
+            "warn"
         ],
         "no-undef": [
             "error"
