--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
 		"express": "^4.17.1",
+		"joi": "^17.12.2",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "^1.10.0",
 		"mysql2": "^3.9.2",
