--- a/.github/workflows/cgi_workflow.yml
+++ b/.github/workflows/cgi_workflow.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/checkout@v2
       - name: Run CGI script
         run: |
-          ./cgi/example.sh
+          ./example_cgi.sh
