--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
         "ecmaVersion": "latest"
     },
     "globals": {
-        "sequelize": "readonly",
+        "readDb": "readonly",
+        "writeDb": "readonly",
         "process": "readonly"
     },
     "rules": {
