--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"axios": "^1.6.8",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
 		"express": "^4.17.1",
