--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"axios": "^1.6.8",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"joi": "^17.12.2",
 		"jsonwebtoken": "^9.0.2",
