--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "Server/index.js",
 	"scripts": {
-		"start": "nodemon Server/index.js",
+		"dev": "nodemon Server/index.js",
 		"lint:fix": "eslint --fix .",
 		"commit": "git-cz",
 		"prepare": "husky"
