--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"mysql2": "^3.9.2"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.17",
 		"conventional-changelog-cli": "^4.1.0",
 		"cz-customizable": "^7.0.0",
 		"eslint": "^8.57.0",
